Fix : Cluster not displaying on mobile + responsive

--- a/assets/scss/page/map.scss
+++ b/assets/scss/page/map.scss
@@ -1,6 +1,6 @@
 // map page
 #map-wrapper-inner {
-  height: calc(100vh - 88px);
+  height: calc(100dvh - 44px);
   position: relative;
   overflow: hidden;
 
@@ -255,4 +255,15 @@
   100% {
     color: #e9cd11;
 }
+}
+
+// Override properties
+
+footer{
+  display: none!important;
+}
+
+body{
+  min-height: 100%!important;
+  padding-bottom: 0!important;
 }
